--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,18 @@
 [versions]
-agp = "8.4.1"
-androidBinding = "1.1.3"
-androidUtilitiesVersion = "2.0.2"
-androidViewex = "1.0.7"
+#plugins
 kotlin = "2.0.0"
+agp = "8.5.0"
+
+#libraries
+androidBinding = "1.1.4"
+androidUtilitiesVersion = "2.0.7"
+androidViewex = "1.0.9"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-appcompat = "1.6.1"
-kotlinxSerializationJson = "1.3.1"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+appcompat = "1.7.0"
+kotlinxSerializationJson = "1.7.1"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
