--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ kotlin = "2.0.20"
 agp = "8.6.0"
 
 #libraries
-androidBinding = "1.3.1"
-androidUtilitiesVersion = "2.2.1"
-androidViewex = "1.1.0"
+androidBinding = "LOCAL"
+androidUtilitiesVersion = "2.3.0"
+androidViewex = "LOCAL"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
