--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,3 +38,4 @@ android-binding = { module = "com.github.toyota-m2k:android-binding", version.re
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
