--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ agp = "8.13.0"
 #libraries
 androidBinding = "1.9.11"
 androidViewex = "1.1.19"
+androidDialog = "6.1.0"
 coreKtx = "1.17.0"
 glide = "5.0.5"
 junit = "4.13.2"
@@ -33,6 +34,7 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3ExoplayerVersion" }
 android-viewex = { module = "com.github.toyota-m2k:android-viewex", version.ref = "androidViewex" }
 android-binding = { module = "com.github.toyota-m2k:android-binding", version.ref = "androidBinding" }
+android-dialog = { module = "com.github.toyota-m2k:android-dialog", version.ref = "androidDialog" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
