--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ kotlin = "2.2.21"
 agp = "8.13.1"
 
 #libraries
-androidBinding = "LOCAL"
+androidBinding = "1.10.1"
 androidViewex = "1.1.19"
-androidDialog = "LOCAL"     # for Sample
+androidDialog = "6.3.1"     # for Sample
 coreKtx = "1.17.0"
 glide = "5.0.5"
 junit = "4.13.2"
@@ -15,7 +15,7 @@ espressoCore = "3.7.0"
 appcompat = "1.7.1"
 kotlinxSerializationJson = "1.9.0"
 material = "1.13.0"
-activity = "1.12.0"
+activity = "1.12.1"
 constraintlayout = "2.2.1"
 media3ExoplayerVersion = "1.8.0"
 
