--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,9 @@ kotlin = "2.3.0"
 agp = "8.13.2"
 
 #libraries
-androidBinding = "1.11.0"
+androidBinding = "LOCAL"
 androidViewex = "1.1.19"
-androidDialog = "6.3.2"     # for Sample
+androidDialog = "LOCAL"     # for Sample
 coreKtx = "1.17.0"
 glide = "5.0.5"
 junit = "4.13.2"
